# splatoon3-rs

./: Cargo.toml  README.md
src/: client.rs
src/endpoints/: mod.rs  stages.rs
src/endpoints/stages/: bankara.rs  mod.rs  regular.rs  x.rs
src/models/: mod.rs  stages.rs
tests/: integration_test.rs
