[package]
name = "splatoon3-rs"
description = "スプラトゥーン3のステージ情報を取得するクレートです"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
